--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,7 +79,7 @@ android {
 
     namespace "com.firstapp"
     defaultConfig {
-        applicationId "com.firstapp"
+        applicationId "com.mybit.smartTodo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
